# asciinema_automation

./: .gitignore  CHANGELOG.md  LICENSE  README.md  README.rst  pyproject.toml  requirements.txt  setup.cfg
.devcontainer/: devcontainer.json
.github/workflows/: CI.yml  publish.yml
asciinema_automation/: __main__.py  cli.py  instruction.py  parse.py  script.py
examples/: asciinema_automation_hello_world.sh  asciinema_hello_world.sh  autocompletion.sh  backward_research.sh  backward_search.sh  change_structure.sh  escaped_command.sh  hello_world.sh  history.sh  man_page.sh  special_character.sh
tests/: custom_rc_file_dumb_term  test_regression.py
tests/reference_output/: asciinema_automation_hello_world.cast  asciinema_hello_world.cast  autocompletion.cast  backward_search.cast  change_structure.cast  escaped_command.cast  hello_world.cast  history.cast  man_page.cast  special_character.cast
