[metadata]
name=asciinema-automation
version=0.0.1
author=Pierre Marchand
description=CLI utility to automate asciinema
url=https://github.com/PierreMarchand20/asciinema_automation

[options]
install_requires =
    pexpect

[options.entry_points]
console_scripts =
    asciinema-automation=asciinema_automation.cli:cli
