[metadata]
name=asciinema-automation
version=0.1.1
author=Pierre Marchand
description=CLI utility to automate asciinema
url=https://github.com/PierreMarchand20/asciinema_automation
keywords = asciinema
license = MIT
long_description = file: README.rst

[options]
packages =
    asciinema_automation
install_requires =
    pexpect
    asciinema

[options.entry_points]
console_scripts =
    asciinema-automation=asciinema_automation.cli:cli
